fixed spacing

--- a/client/src/styles.css
+++ b/client/src/styles.css
@@ -20,14 +20,17 @@ input[type=checkbox] {
 }
 
 .checkbox-group {
-    /* display: inline-flex; */
+    display: inline-flex;
     justify-content: space-between;
     flex-wrap: wrap;
+    /* margin-bottom: 20px;
+    margin-left: 30px; */
+    margin: 10px auto;
 }
 .checkbox-group .form-label {
     width: 50%;
     float: left;
-    margin-bottom: 10px;
+    margin-top: 5px;
 }
 
 input[type=submit],
